--- a/frontend/cinemapp-frontend/src/app/app.component.html
+++ b/frontend/cinemapp-frontend/src/app/app.component.html
@@ -9,27 +9,26 @@
         <button pButton label="Contatti" class="p-button-text"></button>
       </div>
     </p-toolbar>
-  
+
     <!-- Carousel Slider -->
     <div class="carousel">
       <button pButton icon="pi pi-chevron-left" class="p-button-rounded"></button>
       <h2 class="carousel-title">Copertina film / cinema in questione</h2>
       <button pButton icon="pi pi-chevron-right" class="p-button-rounded"></button>
     </div>
-  
+
     <!-- Film Grid -->
     <div class="film-grid">
       <div class="film-card" *ngFor="let film of films">
         <p-card class="shadow-2">
-          <img [src]="film.image" class="film-image">
-          <h3 class="film-title">{{ film.title }}</h3>
+          <img [src]="film.copertina" class="film-image">
+          <h3 class="film-title">{{ film.titolo }}</h3>
         </p-card>
       </div>
     </div>
-  
+
     <!-- Footer -->
     <footer class="footer">
       <p>Recapiti mail - Contatti</p>
     </footer>
   </div>
-  
