Primo collegamento, abbozzo di services, interfacce

--- a/frontend/cinemapp-frontend/src/app/app.component.html
+++ b/frontend/cinemapp-frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
     <p-toolbar class="navbar">
       <div class="navbar-title">CINEMAPP</div>
       <div class="navbar-buttons">
-        <button pButton label="Cinema" class="p-button-text"></button>
+        <button pButton label="Cinema" class="p-button-text" a routerLink="/cinema" routerLinkActive="active" ariaCurrentWhenActive="page"></button>
         <button pButton label="Film" class="p-button-text"></button>
         <button pButton label="Biglietti" class="p-button-text"></button>
         <button pButton label="Contatti" class="p-button-text"></button>
