Aggiunto test per inserimento di un film

--- a/frontend/cinemapp-frontend/src/app/app.component.html
+++ b/frontend/cinemapp-frontend/src/app/app.component.html
@@ -7,6 +7,8 @@
       <button pButton label="Film" routerLink="/film" class="p-button-text"></button>
       <button pButton label="Biglietti" routerLink="/biglietti" class="p-button-text"></button>
       <button pButton label="Contatti" routerLink="/contatti" class="p-button-text"></button>
+      <button pButton label= "Insert Test" routerLink="/insertTest" class="p-button-text"></button>
+
     </div>
   </p-toolbar>
 
